--- a/.env.example
+++ b/.env.example
@@ -1,16 +1,26 @@
-# 服务端口
-PORT=3000
+# ==============================
+# 必须配置（安全相关）
+# ==============================
 
-# 登录密码（普通用户）
-USER_PASSWORD=player123
+# 普通登录密码（必须修改）
+USER_PASSWORD=please-change-user-password
 
-# 管理员密码（设置页使用）
-ADMIN_PASSWORD=admin123
+# 管理员密码（必须修改）
+ADMIN_PASSWORD=please-change-admin-password
 
-# Session签名密钥（生产环境务必更换）
-SESSION_SECRET=change-this-session-secret
+# Session签名密钥（必须修改为高强度随机字符串）
+SESSION_SECRET=please-change-session-secret
 
-# 会话最大持续小时数，开启rolling后会滑动续期
+
+# ==============================
+# 可选配置
+# ==============================
+
+# 统一对外端口（本地/容器/生产都用这一项）
+# 服务端优先读取 APP_PORT；若未设置会回退到 PORT（PaaS常用）再回退到 3000
+APP_PORT=3000
+
+# 会话最大持续小时数，开启 rolling 后会滑动续期
 SESSION_MAX_AGE_HOURS=8
 
 # 本地开发时前端地址（用于CORS）
