--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.9"
 services:
   app:
     build: .
-    container_name: pathfinder-lootmaker
+    container_name: trpg-lootmaker
     ports:
       - "${APP_PORT:-3000}:${APP_PORT:-3000}"
     environment:
